--- a/static/css/2001.css
+++ b/static/css/2001.css
@@ -1,12 +1,22 @@
-h1, h2 {
-    text-align: center
+body, html {
+background-color: #D12C40;
+}
+h1, h2, h3, p {
+    text-align: center;
+    color: #fff;
 }
 .ButtonHolder {
-    text-align: center
+    text-align: center;
+}
+hr.solid {
+    border-style: solid;
+    border-color: #fff;
+    border-width: 5px 0 0 0;
 }
 .PlayButton {
-    background-color: #2ea44f;
-    border: 1px solid rgba(27, 31, 35, .15);
+    margin: 30px;
+    background-color: #6CBA30;
+    border: 1px solid rgba(1, 1, 1, 0.5);
     border-radius: 32px;
     color: #fff;
     font-size: 32px;
@@ -17,4 +27,7 @@ h1, h2 {
 .PlayButton:hover {
     background-color: #2c974b;
 }
-
+.choice {
+display: block;
+margin: 10px
+}
