--- a/templates/game.html
+++ b/templates/game.html
@@ -20,6 +20,9 @@
     <div class="ButtonHolder">
       <input class='PlayButton' type="submit" value="Roll">
     </div>
+    <h2>{{ throw_announcement_1 }}</h2>
+    <h2>{{ throw_announcement_2 }}</h2>
+    <h2>{{ throw_announcement_3 }}</h2>
 </form>
 </body>
 </html>
