--- a/templates/game_over.html
+++ b/templates/game_over.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>2001 - The Game</title>
+  <link rel='stylesheet' href="{{ url_for('static', filename='css/2001.css') }}">
 </head>
 <body>
-
+<h1>{{winner}} wins!</h1>
+<h2>Computer's score: {{computer_score}}</h2>
+<h2>Player's score: {{player_score}}</h2>
 </body>
 </html>
