--- a/templates/game_over.html
+++ b/templates/game_over.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
   <meta charset="UTF-8">
   <title>2001 - The Game</title>
@@ -9,5 +9,8 @@
 <h1>{{winner}} wins!</h1>
 <h2>Computer's score: {{computer_score}}</h2>
 <h2>Player's score: {{player_score}}</h2>
+<div class="ButtonHolder">
+    <a href="/play_again"><button class="PlayButton" type='submit' role="button">Play Again</button></a>
+</div>
 </body>
 </html>
